--- a/przychodnia/src/App.css
+++ b/przychodnia/src/App.css
@@ -2,15 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Arimo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .App {
   text-align: center;
   height: 100%;
 }
 
 .AppEE {
-  min-height: 54vh;
+  min-height: 52vh;
 }
 
 .AppDD {
   min-height: 70vh;
+}
+
+h1 {
+  font-size: 2.5rem; /* Wartość text-xl w tailwindcss */
 }
