--- a/przychodnia/src/App.css
+++ b/przychodnia/src/App.css
@@ -36,6 +36,10 @@ h1 {
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
+.Responsive-img {
+  display: flex;
+}
+
 .HeaderAndFooter {
   background: linear-gradient(115deg, #affaf2, #31bff7);
   color: black;
@@ -81,4 +85,10 @@ h1 {
 .NavbarStyle li:active {
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   color: #04555c;
+}
+
+@media (min-width: 1024px) and (max-width: 1280px) {
+  .Responsive-img {
+    display: none;
+  }
 }
