--- a/przychodnia/src/App.css
+++ b/przychodnia/src/App.css
@@ -111,6 +111,12 @@ h1 {
   width: 24rem;
 }
 
+@media (max-width: 650px) {
+  .downArrowIcon {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) and (max-width: 1280px) {
   .Responsive-img {
     display: none;
