--- a/przychodnia/src/App.css
+++ b/przychodnia/src/App.css
@@ -115,6 +115,9 @@ h1 {
   .downArrowIcon {
     display: none;
   }
+  .ImageRadius {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) and (max-width: 1280px) {
